testcases/negative/malformed_parameter_syntax.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
TEL;TYPE:+1-555-1234
END:VCARD
